bitwardenrs/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bitwardenrs
  name: bitwardenrs
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bitwardenrs
  type: ClusterIP
status:
  loadBalancer: {}
