bitwardenrs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: warden-ing
  namespace: default
spec:
  rules:
  - host: warden.adrianpazon.com
    http:
      paths:
      - backend:
          service:
            name: bitwardenrs
            port:
              number: 80
        path: /
        pathType: Prefix
